<resources>
    <string name="app_name">TaxiGoForDriver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_onboarding">image_onboarding</string>
    <string name="emptyDefault">""</string>
    <string name="banner">More Passengers, More Earnings</string>
    <string name="subbanner">Increase your score and become a more preferred driver thanks to satisfied passengers</string>
    <string name="start">Start</string>
    <string name="phone">Phone</string>
    <string name="coutiune">Continue</string>
    <string name="enter_phone">Enter Your Phone</string>
    <string name="error_zero">Please enter your phone number starting with 5</string>
    <string name="digit_error">Enter numbers 0-9</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="confirmTitle">Enter Your Code</string>
    <string name="send_code">Send Code</string>
    <string name="entered">Entered</string>
    <string name="code_error">Code wrong</string>
    <string name="too_min_error">Code too short</string>
    <string name="select_image">Select Image</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="car_licence_plate">Car Licence Plate</string>
    <string name="please_load_criminal_record">Please Load Criminal Record</string>
    <string name="send_info">Send Info</string>
    <string name="sedan">Sedan</string>
    <string name="transporter">Transporter</string>
    <string name="please_select_taxi_type">Please Select Taxi Type</string>
    <string name="plate_helper">Without 34</string>
    <string name="too_short">Too short</string>
    <string name="location_access_denied">Location permission deniedi</string>
    <string name="accept">Accept</string>
</resources>