<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="errorState"
            type="com.example.taxigofordriver.ui.enterDriverInfo.EnterDriverInfoContract.ErrorState" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.enterDriverInfo.EnterDriverInfoFragment">

        <ImageView
            android:id="@+id/driverImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            app:srcCompat="@drawable/taxi_driver" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectImageBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/basic_button_design"
            android:text="@string/select_image"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driverImage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectImageBttn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cartLiPlateTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/car_licence_plate"
            app:helperText="@string/plate_helper"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surnameTextInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cartLiPlateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/criminalInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/please_load_criminal_record"
            app:layout_constraintStart_toStartOf="@+id/cartLiPlateTextInput"
            app:layout_constraintTop_toBottomOf="@+id/cartLiPlateTextInput" />

        <ImageButton
            android:id="@+id/selectedCriminalRecordBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@android:drawable/stat_sys_download"
            app:layout_constraintBottom_toBottomOf="@+id/criminalInfoText"
            app:layout_constraintStart_toEndOf="@+id/criminalInfoText"
            app:layout_constraintTop_toTopOf="@+id/criminalInfoText" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/cartLiPlateTextInput"
            app:layout_constraintStart_toStartOf="@+id/criminalInfoText"
            app:layout_constraintTop_toBottomOf="@+id/taxTypeTitleTxt">

            <RadioButton
                android:id="@+id/radioSedan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:text="@string/sedan" />

            <RadioButton
                android:id="@+id/radioTrasporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transporter" />

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendInfoBttn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:background="@{errorState.sendInfoButtonState ? @drawable/basic_button_design  : @drawable/disable_basic_button}"
            android:text="@string/send_info"
            android:enabled="@{errorState.sendInfoButtonState}"
            android:textColor="#F6F6F6"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/taxTypeTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/please_select_taxi_type"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/criminalInfoText"
            app:layout_constraintTop_toBottomOf="@+id/criminalInfoText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>